--- a/ch1_standdeg_canopy.Rmd
+++ b/ch1_standdeg_canopy.Rmd
@@ -2367,7 +2367,8 @@ abcover_bylf_bystatus_meanSD_plot_wrap + scale_x_discrete(limits=c("intact", "ma
 
 ```
 
-### 1.2 Canopy height (vertical variation)
+#Canopy HEIGHT
+(vertical variation)
 
 ```{r load csv - canopy height, include=TRUE}
 # stand height 
@@ -2547,7 +2548,7 @@ ggplot(standheight_site_meanSD,
 # 7 Degraded  DEG2            91.8   123  38.0  3.43            0.951                  0.220
 ```
 
-
+### stats 
 ```{r stand height stats, include = TRUE}
 histogram(standheight_full$height_cm)
 
@@ -2582,6 +2583,54 @@ pairwise.wilcox.test(standheight_full$height_cm, standheight_full$site,
 # INT2 = similar to DEG and ENH1
 # INT1 = taller than DEG and ENH2
 # ENH2 = shorter than all other hillslopes
+```
+### lm 
+```{r stand height lm native shrub}
+# join native and non-native cover to stand height
+standheight_withcover <- standheight_full %>% 
+  left_join(nativecover, by = "site_rep") %>% 
+  group_by(site, site_rep, native_shrub, nonnative_grass) %>% 
+  summarize(mean_height = mean(height_cm))
+
+height_native <- ggplot(standheight_withcover,
+       aes(x = native_shrub*100, y = mean_height, color = site)) +
+  geom_point() +
+  #geom_jitter() +
+ # theme(axis.text.x.bottom = element_text(angle = 90)) +
+  labs(x = "Native Shrub Cover (%)", 
+       y = "Canopy height (cm)", 
+       title = "Canopy height (cm) by Native Shrub cover (%)") +
+   geom_smooth(method = "lm", se = FALSE, linetype = "solid", color = "black")   # lm, loess, glm
+height_native
+
+ggsave("Ch1_Degradation_figures/height_shrubcover.png", height_native, width = 8, height = 6)
+
+summary(lm(mean_height ~ native_shrub, data = standheight_withcover))
+# Residual standard error: 28.31 on 13 degrees of freedom
+# Multiple R-squared:  0.5059,	Adjusted R-squared:  0.4679 
+# F-statistic: 13.31 on 1 and 13 DF,  p-value: 0.002948
+
+```
+
+```{r stand height lm nn grass}
+
+height_nn <- ggplot(standheight_withcover,
+       aes(x = nonnative_grass, y = height_cm, color = site)) +
+  geom_point() +
+  geom_jitter() +
+  theme(axis.text.x.bottom = element_text(angle = 90)) +
+  labs(x = "Non-native Grass Cover (%)", 
+       y = "Canopy height (cm)", 
+       title = "Canopy height (cm) by Non-native Grass cover (%)") +
+   geom_smooth(method = "lm", se = FALSE, linetype = "solid", color = "black")   # lm, loess, glm
+
+ggsave(height_nn, )
+
+summary(lm(height_cm ~ nonnative_grass, data = standheight_withcover))
+# Residual standard error: 67.34 on 613 degrees of freedom
+# Multiple R-squared:  0.1138,	Adjusted R-squared:  0.1123 
+# F-statistic: 78.68 on 1 and 613 DF,  p-value: < 2.2e-16
+
 ```
 
 
@@ -3008,16 +3057,31 @@ sort(unique(shrubdensity$species))
 
 #### ALIVE shrub density
 
-```{r alive shrub dentsity 1m2 and figure x nngrass, include=TRUE}
+```{r alive shrub dentsity 1m2, include=TRUE}
 
 # ALIVE
 shrubdensity_sum_bysiterep <- shrubdensity %>% # call tibble
   filter(status != "dead") %>% #omit dead shrubs
-  group_by(standtype, site_rep) %>%  # lump immature, mature, resprout shrubs and seedlings
+   mutate(site = case_when(
+    site == "Intact1" ~ "SD1", # old name ~ new name
+      site == "Intact2" ~ "SD2",
+      site == "Intact3" ~ "SD3",
+    site == "ENH1" ~ "MX1",
+      site == "ENH2" ~ "MX2",
+      site == "DEG1" ~ "GD1",
+      site == "DEG2" ~ "GD2",
+    TRUE ~ as.character(site)  # Keep other observations unchanged
+  )) %>% 
+  rename(Hillslope = site) %>% # old name = new name
+  mutate(Hillslope = fct_relevel(Hillslope, "SD1", "SD2", "SD3", "MX1", "MX2", "GD1", "GD2")) %>% 
+  group_by(standtype, Hillslope, site_rep) %>%  # lump immature, mature, resprout shrubs and seedlings
   summarize(aliveshrubdensity_80m2 = sum(count), 
             aliveshrubdensity_1m2 = aliveshrubdensity_80m2/80)  # 4m x 20 m belt transect
 print(shrubdensity_sum_bysiterep) 
 
+```
+
+```{r alive shrub desity grouped by species}
 shrubdensity_alive_byspp <- shrubdensity %>% # call tibble
   filter(status != "dead") %>% #omit dead shrubs
   group_by(species, site_rep) %>%  # lump immature, mature, resprout shrubs and seedlings
@@ -3029,28 +3093,80 @@ print(shrubdensity_alive_byspp)
 # write.csv(shrubdensity_alive_byspp, "Ch1_Degradation_figures/shrubdensity_alive_byspp.csv")
 ```
 
-```{r}
+```{r left join percent cover to alive shrub density}
 
-nativecover <- read.csv("processed/abcover_nativecover_nngrasscover.csv") # native percent cover from ch1_standdeg_canopy.Rmd
-sort(unique(nativecover$site_rep))
-# "DEG1_1"     "DEG1_2"     "DEG1_3"     "DEG2_4"     "DEG2_5"     "DEG2_6"     "ENH1_1"     "ENH1_2"     "ENH1_3"     "ENH2_4"     "ENH2_5"    
-# "ENH2_6"     "Intact_1_1" "Intact_2_2" "Intact_3_3"
-glimpse(nativecover)
+nativecover_fordensity <- nativecover %>% #created for stand height and cov
+  mutate(site_rep = case_when(
+    site_rep == "Intact_1_1" ~ "Intact1_1", # old name ~ new name
+       site_rep == "Intact_2_2" ~ "Intact2_2",
+       site_rep == "Intact_3_3" ~ "Intact3_3",
+     TRUE ~ as.character(site_rep)  # Keep other observations unchanged
+   ))  %>% 
+  dplyr::select(site_rep, native_shrub, nonnative_grass)
 
-nncover <- read.csv("processed/abcover_nonnativecover_nngrasscover.csv") # non-native percent cover from ch1_standdeg_canopy.Rmd
-sort(unique(nncover$site_rep))
-# "DEG1_1"     "DEG1_2"     "DEG1_3"     "DEG2_4"     "DEG2_5"     "DEG2_6"     "ENH1_1"     "ENH1_2"     "ENH1_3"     "ENH2_4"     "ENH2_5"    
-# "ENH2_6"     "Intact_1_1" "Intact_2_2" "Intact_3_3"
-glimpse(nncover)
+view(nativecover_fordensity)
 
+```
 
-shrubdensity_sum_bysiterep_nat <- shrubdensity_sum_bysiterep %>%
- left_join(nativecover, by = "site_rep") 
-shrubdensity_sum_bysiterep_nat_nn <- shrubdensity_sum_bysiterep_nat %>% # join above ground species diversity with non-native transect percent cover
-  left_join(nncover, by = "site_rep")
-print(shrubdensity_sum_bysiterep_nat_nn)
+```{r left join native and non-native cover to density data}
 
-shrubdensity_sum_bysiterep_regression <- ggplot(data = shrubdensity_sum_bysiterep_nat_nn, 
+shrubdensity_sum_bysiterep_cover <- shrubdensity_sum_bysiterep %>%
+ left_join(nativecover_fordensity, by = "site_rep") 
+view(shrubdensity_sum_bysiterep_cover)
+```
+
+### figure - native shrub cover
+```{r sandbox}
+
+  aes(x = nonnative_grass*100, y = cov, color = Hillslope)) + #color = site
+  geom_point(size = 3, alpha = 0.8) +
+  ylim(0, 1)+
+  xlim(0,100) +
+  geom_smooth(method = "lm", se = FALSE, linetype = "solid", color = "black") +  # lm, loess, glm
+  labs(x = "Non-native grass cover (%)", 
+       y = "Canopy Heterogeneity (COV)", 
+       title = "Canopy Heterogeneity (COV) by Non-native grass cover (%)") +
+  theme_bw() 
+#+  
+ #  stat_poly_line() +
+ #   stat_poly_eq(
+ #    aes(label = paste(after_stat(eq.label), after_stat(adj.rr.label), sep = "~~~~")),
+ #    formula = formula1, 
+ #    parse=TRUE
+ # )
+cov_nngrasscover
+ggsave("Ch1_Degradation_figures/cov_nncover.png", cov_nngrasscover, width = 8, height = 6)
+
+cov_nngrass.lm <- lm(cov ~ nonnative_grass, 
+                                      data = standheight_cov_cover)
+summary(cov_nngrass.lm)
+```
+
+```{r linear regression - density x nat cover}
+alivedensity_shrubcover_linear <- ggplot(shrubdensity_sum_bysiterep_cover, 
+       aes(x = native_shrub*100, y = aliveshrubdensity_1m2, olor = Hillslope)) + 
+  geom_point(size = 3, alpha = 0.8) +
+
+#  scale_shape_manual(values = c(16, 17, 18)) +
+  ylim(0, 3)+
+  xlim(0,100) +
+  geom_smooth(method = "lm", se = FALSE, linetype = "solid", color = "black") +  # lm, loess, glm
+  scale_color_manual(values = c(standcolors),
+                     name = "Stand Type",
+                     labels = c("intact" = "shrub dominated", 
+                                "matrix" = "matrix", 
+                                "degraded" = "grass dominated")) + #rename standtypes labels
+  labs(x = "Non-native grass cover (%)", 
+       y = "Shrub Density (#/m2)", 
+       title = "Shrub density (per m2) x non-native grass cover") +
+  theme_bw() +  
+  stat_poly_line() +
+  stat_poly_eq(use_label(c("eq", "R2")))
+print(shrubdensity_sum_bysiterep_regression)
+```
+
+```{r linear regression - density x nn cover}
+shrubdensity_sum_bysiterep_regression <- ggplot(shrubdensity_sum_bysiterep_cover, 
        aes(x = nonnative_grass*100, y = aliveshrubdensity_1m2, shape = standtype, color = standtype)) + #color = standtype
   geom_point(size = 3, alpha = 0.8) +
   scale_shape_manual(values = c(16, 17, 18)) +
