--- a/ch1_all_nmds.Rmd
+++ b/ch1_all_nmds.Rmd
@@ -136,7 +136,7 @@ nmds.fort <- fortify(nmds_total.nmds)
 
 nmds_total.nmds2 <- metaMDS(nmds_total, 
                             autotransform = T,
-                             distance = "raup", # raup, bray
+                             distance = "bray", # raup, bray
                  k = 2,
                  try = 100,
                  trymax = 100)
@@ -200,7 +200,7 @@ nmds_total.nmds2_coord <- nmds_total.nmds2_fit %>%
   as.data.frame() %>% 
   rownames_to_column("species") %>% 
   full_join(., nmds_total.nmds2_pvals, by = "species") %>% 
-  filter(pvals <= 0.05) %>% # <-- set p-value level here: 0.05, 0.008
+  filter(pvals <= 0.008) %>% # <-- set p-value level here: 0.05, 0.008
   filter(!species == 'standtype_ID')
 dim(nmds_total.nmds2_coord) # <-- limit number of vectors to <7 for clarity
 #write.csv(nmds_total.nmds2_coord,"Ch1_Degradation_figures/nmds2_pval.1.csv")
@@ -224,6 +224,7 @@ total_nmds2_hillslope_vectors <- ggplot(nmds_total.nmds2_plot %>% # output of sc
    geom_text(data = nmds_total.nmds2_coord, aes(label = species),  
              position = position_jitter(width = 0.0, height = 0.4)
              )
+total_nmds2_hillslope_vectors 
 total_nmds2_hillslope_vectors + theme_bw()
 total_nmds2_hillslope_vectors + theme_bw()
 total_nmds2_hillslope_vectors + theme_bw()
@@ -231,7 +232,8 @@ total_nmds2_hillslope_vectors + theme_bw()
 total_nmds2_hillslope_vectors + theme_bw()
 total_nmds2_hillslope_vectors + theme_bw()
 total_nmds2_hillslope_vectors + theme_bw()
-total_nmds2_hillslope_vectors + theme_bw()
+
+ggsave("Ch1_Degradation_figures/nmds_all.png", total_nmds2_hillslope_vectors, width = 8, height = 6)
 ```
 
 ```{r NMDS Graphing}
